src/components/Archive/Archive.scss
@import 'sass-includes';

.archive__wrapper {
  z-index: 10;
  width: 100%;
  position: relative;
}

.archive {
  padding-top: 14rem;
  padding-bottom: 14rem;
}

.archive__grid {
  @extend %clearfix;
  max-width: 128rem;
  margin: 0 auto;
}

.archive__item {
  background: $light-gray;
  position: relative;
  width: calc(33.33% - 4rem);
  margin: 2rem;
  float: left;
  cursor: pointer;
  transition: transform 0.2s ease-in-out;
  z-index: 5;
  // media queries
  @include breakpoint($tablet-md) {
    width: calc(50% - 2rem);
    margin: 1rem;
  }
  @include breakpoint($mobile-sm) {
    width: 100%;
    margin-left: 0;
    margin-right: 0;
  }

  a { display: block; }

  &:hover {
    transform: scale(1.15);
    z-index: 6;

    .archive__overlay {
      height: 100%;

      > div {
        transform: none;
        opacity: 1;
        transition-delay: 0.2s;
      }
    }
  }

  img {
    display: block;
    width: 100%;
  }
}

.archive__name {
  position: absolute;
  bottom: 0;
  left: 0;
  padding: 3rem;
  z-index: 12;
}

.archive__imgspacer {
  height: 40rem;
}

.archive__overlay {
  position: absolute;
  bottom: 0;
  left: 0;
  height: 0;
  width: 100%;
  transition: height 0.3s ease-in-out;
  overflow: hidden;
  z-index: 10;

  > div {
    opacity: 0;
    transform: translateY(2rem);
    transition: opacity 0.3s ease-out 0s, transform 0s ease-in-out 2s;
  }
}

